--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "node-uuid": "^1.4.8",
     "pug": "2.0.0-beta11",
-    "pushover-notifications": "^1.2.2"
+    "pushover-notifications": "^1.2.2",
+    "socket.io": "^2.3.0"
   }
 }
