--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^3.1.1",
+    "binance-api-node": "^0.9.15",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
+    "log4js": "^6.1.2",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "node-binance-api": "^0.10.2",
+    "node-cron": "^2.0.3",
     "node-uuid": "^1.4.8",
+    "path": "^0.12.7",
     "pug": "2.0.0-beta11",
     "pushover-notifications": "^1.2.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^3.4.0"
   }
 }
